LIVIJUKU-1028 - csrf prevention update to prevent unnecessary user errors

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,8 @@
       <juku-footer></juku-footer>
     </div>
 
+    <!-- request xsrf token from backend-->
+    <script src="api/request-token"></script>
     <script>
       FileAPI = {
         jsPath: 'scripts/ie9/',
